--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Document{% endblock %}
+{% block title %}Редактирование профиля{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('documents') }}
@@ -16,7 +16,7 @@
         <div class="page-wrapper">
             {% include 'block/header.html.twig'
                 with {
-                header: 'Документы',
+                header: 'Редактирование профиля',
             }
             %}
         </div>
