--- a/templates/financial/index.html.twig
+++ b/templates/financial/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Financial{% endblock %}
+{% block title %}Финансы{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('financial') }}
