--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Main{% endblock %}
+{% block title %}Добро пожаловать{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('main') }}
